--- a/oanda.cfg
+++ b/oanda.cfg
@@ -1,5 +1,5 @@
 [oanda]
-account_id = 101-011-31527722-001
-access_token = 29af09f0342ec8568a468cddd46985f5-117dd2942a310c3012129b58193c8de6
-account_type = Practice
+account_id =
+access_token =
+account_type =
 
